--- a/AI2.ipynb
+++ b/AI2.ipynb
@@ -11,6 +11,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Подключение Гугл Диска"
+      ],
+      "metadata": {
+        "id": "uJQNMAhsYxCN"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from google.colab import drive\n",
@@ -35,6 +44,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Подключение библиотек и считывание CSV"
+      ],
+      "metadata": {
+        "id": "c8_91eLWY6HJ"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -51,6 +69,15 @@
         "# Загрузка данных\n",
         "data = pd.read_csv('/content/drive/MyDrive/Salary_Data.csv')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 1/2. Название Датасета и Постановка Задачи"
+      ],
+      "metadata": {
+        "id": "tkdja7zvY_Uu"
+      }
     },
     {
       "cell_type": "code",
@@ -79,6 +106,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3. Гистограмма и уникальные значения"
+      ],
+      "metadata": {
+        "id": "Zh8Zs48wZF8m"
+      }
     },
     {
       "cell_type": "code",
@@ -125,6 +161,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 4. Основные статистики"
+      ],
+      "metadata": {
+        "id": "WaK-j15ZZJ60"
+      }
     },
     {
       "cell_type": "code",
@@ -176,6 +221,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "# 5. Основная информация"
+      ],
+      "metadata": {
+        "id": "9bqs7FAgZM5m"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 5. Основная информация по датасету\n",
@@ -213,6 +267,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 6. Количество пропусков"
+      ],
+      "metadata": {
+        "id": "M6IcJGLaZPxx"
+      }
     },
     {
       "cell_type": "code",
@@ -254,6 +317,15 @@
       ],
       "metadata": {
         "id": "V79-jiU9sBmR"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 7. Гистограммы признаков"
+      ],
+      "metadata": {
+        "id": "mZKX80hyZSFq"
       }
     },
     {
@@ -335,6 +407,15 @@
       ],
       "metadata": {
         "id": "CYb1wmo-sVT7"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 8. Графики зависимости от целевой переменной"
+      ],
+      "metadata": {
+        "id": "GLkkNaGyZXLQ"
       }
     },
     {
@@ -462,17 +543,16 @@
         "    plt.xlabel(var)\n",
         "    plt.ylabel('Salary')\n",
         "    plt.grid(True)\n",
-        "    plt.show()\n"
+        "    plt.show()"
       ],
       "metadata": {
         "id": "HXTTW88SNVLW",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "69ffc076-4aca-49b8-ea2f-2aa8f8a6f4f5"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -608,7 +688,7 @@
       "collapsed_sections": [
         "uPJTbHbQgVDl"
       ],
-      "authorship_tag": "ABX9TyNi280B9KQ7viKE0pwkrc9S",
+      "authorship_tag": "ABX9TyP7nHqkWlesUAbhohX+Ovr7",
       "include_colab_link": true
     },
     "kernelspec": {
